--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "ts-mocha"
+    "test": "jest"
   },
   "dependencies": {
     "next": "14.2.14",
@@ -15,13 +15,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.9",
+    "@jest/globals": "^29.7.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "mocha": "^10.7.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-mocha": "^10.0.0",
